migrate openai code to latest version

--- a/notebooks/osccai_simulation.ipynb
+++ b/notebooks/osccai_simulation.ipynb
@@ -48,7 +48,6 @@
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
     "import json\n",
-    "import openai\n",
     "from getpass import getpass\n",
     "from IPython.display import display, Markdown\n",
     "from google.colab import files\n",
@@ -56,11 +55,11 @@
     "import numpy as np\n",
     "from scipy.stats import beta, nbinom\n",
     "import random\n",
+    "from openai import OpenAI\n",
     "\n",
     "# Set up OpenAI API key\n",
-    "openai.api_key = os.getenv(\"OPENAI_API_KEY\")\n",
-    "if not openai.api_key:\n",
-    "    openai.api_key = getpass(\"Please enter your OpenAI API key: \")"
+    "client = OpenAI(api_key=os.getenv(\"OPENAI_API_KEY\"),\n",
+    "api_key=getpass(\"Please enter your OpenAI API key: \"))"
    ]
   },
   {
@@ -241,16 +240,14 @@
     "def get_openai_completion(prompt, max_tokens=1500):\n",
     "    \"\"\"Sends a prompt to the OpenAI API and returns the completion.\"\"\"\n",
     "    try:\n",
-    "        response = openai.ChatCompletion.create(\n",
-    "            model=\"gpt-4\",\n",
-    "            messages=[\n",
-    "                {\"role\": \"system\", \"content\": \"You are an assistant that outputs JSON-formatted data.\"},\n",
-    "                {\"role\": \"user\", \"content\": prompt}\n",
-    "            ],\n",
-    "            max_tokens=max_tokens,\n",
-    "            temperature=0.7\n",
-    "        )\n",
-    "        return response['choices'][0]['message']['content']\n",
+    "        response = client.chat.completions.create(model=\"gpt-4\",\n",
+    "        messages=[\n",
+    "            {\"role\": \"system\", \"content\": \"You are an assistant that outputs JSON-formatted data.\"},\n",
+    "            {\"role\": \"user\", \"content\": prompt}\n",
+    "        ],\n",
+    "        max_tokens=max_tokens,\n",
+    "        temperature=0.7)\n",
+    "        return response.choices[0].message.content\n",
     "    except Exception as e:\n",
     "        print(f\"Error during OpenAI API call: {e}\")\n",
     "        return None\n",
