update vote matrix generation, and visualization to use red/green/gray

--- a/notebooks/osccai_simulation.ipynb
+++ b/notebooks/osccai_simulation.ipynb
@@ -673,7 +673,7 @@
     "    # Fallback for environments where get_event_loop() might fail\n",
     "    all_statements = asyncio.run(generate_statements())\n",
     "\n",
-    "# convert list of dict objects: [{\"participant_id\":<id>, \"statements\":[<statements>]}] to a dict with keys: {<id>:[<statements>],}\n",
+    "# convert list of dict objects: [{\"participant_id\":<participant_id>, \"statements\":[<statements>]}] to a dict with keys: {<participant_id>:[<statements>],}\n",
     "participant_statements = {item['participant_id']: item['statements'] for item in all_statements['data']}\n",
     "\n",
     "try:\n",
@@ -714,36 +714,34 @@
     "# Prepare numbered statements list\n",
     "statements_list = []\n",
     "statement_id = 1\n",
-    "participant_ids = []\n",
-    "for participant in participant_statements:\n",
-    "    participant_ids.append(participant['participant_id'])\n",
-    "    for stmt in participant['statements']:\n",
+    "for participant_id, statements in participant_statements.items():\n",
+    "    for stmt in statements:\n",
     "        statements_list.append({'statement_id': statement_id, 'text': stmt})\n",
     "        statement_id += 1\n",
     "\n",
-    "print(f\"Prepared {len(statements_list)} statements for {len(participant_ids)} participants\")\n",
+    "print(f\"Prepared {len(statements_list)} statements for {len(participant_statements)} participants\")\n",
     "\n",
     "numbered_statements_list = json.dumps(statements_list, indent=4)\n",
     "\n",
     "# Prepare participants and assignments data\n",
     "max_statements = len(statements_list)\n",
-    "votes_per_participant = calculate_votes_per_participant(num_participants, max_statements)\n",
-    "vote_distributions = calculate_vote_distribution_per_participant(num_participants)\n",
+    "votes_per_participant = calculate_votes_per_participant(len(participant_statements), max_statements)\n",
+    "vote_distributions = calculate_vote_distribution_per_participant(len(participant_statements))\n",
     "\n",
     "print(f\"Calculated votes per participant and vote distributions\")\n",
     "\n",
-    "chunked_data = []\n",
-    "for i, participant in enumerate(participant_statements):\n",
+    "chunkable_data = []\n",
+    "for i, (participant_id, statements) in enumerate(participant_statements.items()):\n",
     "    num_votes = votes_per_participant[i]\n",
     "    available_statements = [s['statement_id'] for s in statements_list]\n",
     "    assigned_statements = random.sample(available_statements, min(num_votes, len(available_statements)))\n",
-    "    chunked_data.append({\n",
-    "        'participant_id': participant['participant_id'],\n",
+    "    chunkable_data.append({\n",
+    "        'participant_id': participant_id,\n",
     "        'statements_assigned': assigned_statements,\n",
     "        'vote_distribution': dict(zip(['agree', 'disagree', 'pass'], vote_distributions[i]))\n",
     "    })\n",
     "\n",
-    "print(f\"Prepared chunked data for {len(chunked_data)} participants\")\n",
+    "print(f\"Prepared chunkable data for {len(chunkable_data)} participants\")\n",
     "\n",
     "vote_simulation_prompt = f\"\"\"\n",
     "Simulate voting patterns for a community AI model alignment survey. Use the following information:\n",
@@ -780,7 +778,7 @@
     "    print(\"Starting vote simulation...\")\n",
     "    chunked_response = await get_openai_completion_chunked(\n",
     "        vote_simulation_prompt,\n",
-    "        chunked_data,\n",
+    "        chunkable_data,\n",
     "        chunk_size=5  # Adjust this value as needed\n",
     "    )\n",
     "    print(\"Completed vote simulation\")\n",
@@ -801,16 +799,18 @@
     "\n",
     "if vote_simulation_response:\n",
     "    try:\n",
-    "        vote_data = json.loads(vote_simulation_response)\n",
-    "        votes = vote_data['data']\n",
+    "        vote_data = vote_simulation_response['data']\n",
+    "        # make sure vote statement_ids are ints\n",
+    "        participant_votes = {item['participant_id']: {int(stmt_id): vote for stmt_id, vote in item['votes'].items()} for item in vote_data}\n",
+    "        # participant_votes = { <participant_id>: {<statement_id>: <vote>, ...}, ... }\n",
     "        print(\"\\nSimulated Votes:\")\n",
-    "        print(json.dumps(vote_data, indent=4))\n",
-    "    except json.JSONDecodeError as e:\n",
-    "        print(f\"Error parsing JSON: {e}\")\n",
-    "        votes = []\n",
+    "        print(json.dumps(participant_votes, indent=4))\n",
+    "    except (json.JSONDecodeError, KeyError) as e:\n",
+    "        print(f\"Error processing vote data: {e}\")\n",
+    "        participant_votes = {}\n",
     "else:\n",
     "    print(\"No vote simulation response received\")\n",
-    "    votes = []\n",
+    "    participant_votes = {}\n",
     "\n",
     "print(\"Vote simulation process completed\")"
    ]
@@ -829,17 +829,15 @@
    "outputs": [],
    "source": [
     "# Create empty matrix (rows = participants, columns = statements)\n",
-    "participant_ids = [vote['participant_id'] for vote in votes]\n",
-    "statement_ids = [s['statement_id'] for s in statements_list]\n",
+    "participant_ids = list(participant_votes.keys())\n",
+    "statement_ids = sorted(set(stmt_id for votes in participant_votes.values() for stmt_id in votes))\n",
     "\n",
     "vote_matrix = pd.DataFrame(index=participant_ids, columns=statement_ids)\n",
     "\n",
-    "# Populate matrix with extracted votes\n",
-    "for vote_entry in votes:\n",
-    "    participant_id = vote_entry['participant_id']\n",
-    "    participant_votes = vote_entry['votes']\n",
-    "    for stmt_id, vote_value in participant_votes.items():\n",
-    "        vote_matrix.at[participant_id, int(stmt_id)] = vote_value\n",
+    "# Populate matrix with votes\n",
+    "for participant_id, votes in participant_votes.items():\n",
+    "    for stmt_id, vote_value in votes.items():\n",
+    "        vote_matrix.at[participant_id, stmt_id] = vote_value\n",
     "\n",
     "# Convert data types\n",
     "vote_matrix = vote_matrix.apply(pd.to_numeric, errors='coerce')"
@@ -858,10 +856,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Generate heatmap of Vote Matrix\n",
+    "import matplotlib.colors as mcolors\n",
+    "\n",
+    "# Create a custom colormap\n",
+    "cmap = mcolors.ListedColormap(['red', 'gray', 'green'])\n",
+    "bounds = [-1.5, -0.5, 0.5, 1.5]\n",
+    "norm = mcolors.BoundaryNorm(bounds, cmap.N)\n",
+    "\n",
     "plt.figure(figsize=(12, 8))\n",
-    "plt.imshow(vote_matrix.fillna(0), aspect='auto', cmap='bwr', interpolation='none')\n",
-    "plt.colorbar(label='Vote (-1: Disagree, 0: Pass, 1: Agree)')\n",
+    "plt.imshow(vote_matrix.fillna(0), aspect='auto', cmap=cmap, norm=norm, interpolation='none')\n",
+    "\n",
+    "# Create a custom colorbar\n",
+    "cbar = plt.colorbar(ticks=[-1, 0, 1])\n",
+    "cbar.set_ticklabels(['Disagree', 'Pass', 'Agree'])\n",
+    "cbar.set_label('Vote')\n",
+    "\n",
     "plt.xlabel('Statements')\n",
     "plt.ylabel('Participants')\n",
     "plt.title('Vote Matrix Heatmap')\n",
