add convert vote_matrix to text for analysis, temporary file for holding the first results

--- a/notebooks/osccai_simulation.ipynb
+++ b/notebooks/osccai_simulation.ipynb
@@ -881,6 +881,26 @@
     "print(\"\\n### Vote Distribution Statistics ###\")\n",
     "print(vote_counts)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Convert vote_matrix to a list of lists\n",
+    "vote_matrix_list = vote_matrix.values.tolist()\n",
+    "\n",
+    "# Replace NaN values with None\n",
+    "vote_matrix_list = [[None if pd.isna(value) else int(value) for value in row] for row in vote_matrix_list]\n",
+    "\n",
+    "# Print the result\n",
+    "print(\"Vote matrix as a list of lists:\")\n",
+    "print(\"[\")\n",
+    "for row in vote_matrix_list:\n",
+    "    print(f\"    {row},\")\n",
+    "print(\"]\")"
+   ]
   }
  ],
  "metadata": {
