fix notebook handling of participant_ids, update run_dimensional_clusters
run_multidimensional_clusters script now handles null values, different impute methods for comparison

--- a/notebooks/osccai_simulation.ipynb
+++ b/notebooks/osccai_simulation.ipynb
@@ -55,6 +55,7 @@
     "from scipy.stats import beta, nbinom\n",
     "import random\n",
     "from openai import OpenAI\n",
+    "import openai\n",
     "\n",
     "# Try to import from google.colab if available, otherwise use a fallback\n",
     "try:\n",
@@ -320,6 +321,11 @@
     "        print(\"Received response from OpenAI\")\n",
     "        return completion\n",
     "    except Exception as e:\n",
+    "        if isinstance(e, openai.error.RateLimitError):\n",
+    "            retry_after = e.response.headers.get(\"Retry-After\", 10)\n",
+    "            print(f\"Rate limit exceeded. Retrying after {retry_after} seconds.\")\n",
+    "            time.sleep(int(retry_after))\n",
+    "            raise\n",
     "        print(f\"Error during OpenAI API call: {e}\")\n",
     "        raise # Re-raise the exception to stop execution\n",
     "\n",
@@ -339,7 +345,7 @@
     "        with ThreadPoolExecutor() as pool:\n",
     "            return await asyncio.wait_for(\n",
     "                loop.run_in_executor(pool, get_openai_completion, prompt),\n",
-    "                timeout=60  # 60 seconds timeout\n",
+    "                timeout=120  # 120 seconds timeout\n",
     "            )\n",
     "    except TimeoutError:\n",
     "        print(\"API call timed out\")\n",
@@ -506,13 +512,13 @@
     "Number of Subgroups: {num_subgroups}\n",
     "\n",
     "For each subgroup:\n",
-    "1. Provide a 2-sentence description of the subgroup.\n",
+    "1. Provide a 2-sentence description of the subgroup. This description must start with the words: \"This group consists of individuals who...\"\n",
     "\n",
     "Ensure descriptions are diverse and realistic within the context of the community.\n",
     "\n",
     "Return your response in the following JSON format:\n",
     "{{\"subgroups\": [\n",
-    "    {{\"description\": \"Subgroup description\"}},\n",
+    "    {{\"description\": \"This group consists of individuals who <rest of description>\"}},\n",
     "    ...]\n",
     "}}\n",
     "\"\"\"\n",
@@ -551,6 +557,9 @@
     "    For each subgroup in the input data, generate the specified number of participant descriptions.\n",
     "    Ensure descriptions are diverse and realistic within the context of the community.\n",
     "    \n",
+    "    The description of each participant should take this form: \"A <demographic description> who is <extended description of situation, personality, or goals>.\"\n",
+    "    Do not include the name of the participant.\n",
+    "\n",
     "    Return your response in the following JSON format:\n",
     "    {\"data\": [{ \"subgroup_index\": 0, \"participants\": [\"Participant 1 description\", \"Participant 2 description\", ...] },\n",
     "              { \"subgroup_index\": 1, \"participants\": [...] },\n",
@@ -572,13 +581,20 @@
     "    all_participants = loop.run_until_complete(generate_participants())\n",
     "except RuntimeError:\n",
     "    # Fallback for environments where get_event_loop() might fail\n",
-    "    all_participants = asyncio.run(generate_participants())\n",
-    "\n",
+    "    all_participants = asyncio.run(generate_participants())\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Combine subgroups by index from all_subgroups_data and participants from all_participants into group_data\n",
     "group_data = {\n",
     "    \"subgroups\": [\n",
     "        {\n",
-    "            \"description\": subgroup['description'],\n",
+    "            \"description\": subgroup_data['description'],\n",
     "            \"participants\": next(item for item in all_participants['data'] if item[\"subgroup_index\"] == subgroup_data[\"subgroup_index\"])[\"participants\"]\n",
     "        }\n",
     "        for subgroup_data in indexed_subgroup_data\n",
@@ -604,22 +620,36 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Sample statements per participant\n",
-    "statements_per_participant = sample_statements_per_participant(num_participants)\n",
+    "# Calculate the total number of participants\n",
+    "total_participants = sum(len(subgroup['participants']) for subgroup in group_data['subgroups'])\n",
+    "\n",
+    "# Sample statements per participant - Ensure the number of samples matches the total number of participants\n",
+    "statements_per_participant = sample_statements_per_participant(total_participants)\n",
     "\n",
     "# Create an iterator from statements_per_participant\n",
     "statements_iter = iter(statements_per_participant)\n",
     "\n",
     "# Prepare the data structure for chunked processing\n",
     "chunkable_data = []\n",
+    "participant_id_counter = 1  # Initialize a counter for unique participant IDs\n",
+    "\n",
     "for subgroup_index, subgroup in enumerate(group_data['subgroups']):\n",
     "    for participant in subgroup['participants']:\n",
     "        chunkable_data.append({\n",
+    "            'participant_id': participant_id_counter,\n",
     "            'subgroup_index': int(subgroup_index),\n",
     "            'num_statements': int(next(statements_iter)),\n",
     "            'participant': participant\n",
     "        })\n",
-    "\n",
+    "        participant_id_counter += 1  # Increment the counter for the next participant\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Verify that all statements_per_participant values were used\n",
     "if any(True for _ in statements_iter):\n",
     "    print(\"Warning: Not all statements_per_participant values were used.\")\n",
@@ -642,13 +672,13 @@
     "For each participant in the input data, generate the specified number of statements that align with their subgroup and individual characteristics. Ensure statements are diverse and relevant to the community's goals.\n",
     "\n",
     "The input data format is:\n",
-    "[subgroup_index, number_of_statements_to_generate, participant_description]\n",
+    "[participant_id, subgroup_index, number_of_statements_to_generate, participant_description]\n",
     "\n",
     "Return your response in the following JSON format:\n",
     "{{\n",
     "    \"data\": [\n",
     "        {{\n",
-    "            \"participant_id\": \"Unique identifier\",\n",
+    "            \"participant_id\": \"<participant_id>\",\n",
     "            \"statements\": [\"Statement 1\", \"Statement 2\", ...]\n",
     "        }},\n",
     "        ...\n",
