export data and llm_cache

--- a/notebooks/osccai_simulation.ipynb
+++ b/notebooks/osccai_simulation.ipynb
@@ -308,12 +308,14 @@
     "        return llm_cache[cache_key]\n",
     "\n",
     "    try:\n",
-    "        response = client.chat.completions.create(model=\"gpt-4\",\n",
-    "        messages=[\n",
-    "            {\"role\": \"system\", \"content\": \"You are an assistant that outputs JSON-formatted data.\"},\n",
-    "            {\"role\": \"user\", \"content\": prompt}\n",
-    "        ],\n",
-    "        temperature=0.7)\n",
+    "        response = client.chat.completions.create(\n",
+    "            model=\"gpt-4\",\n",
+    "            messages=[\n",
+    "                {\"role\": \"system\", \"content\": \"You are an assistant that outputs JSON-formatted data.\"},\n",
+    "                {\"role\": \"user\", \"content\": prompt}\n",
+    "            ],\n",
+    "            temperature=0.7\n",
+    "        )\n",
     "        completion = response.choices[0].message.content\n",
     "\n",
     "        # Cache the response\n",
@@ -321,13 +323,13 @@
     "        print(\"Received response from OpenAI\")\n",
     "        return completion\n",
     "    except Exception as e:\n",
-    "        if isinstance(e, openai.error.RateLimitError):\n",
-    "            retry_after = e.response.headers.get(\"Retry-After\", 10)\n",
+    "        if \"RateLimitError\" in str(type(e)):\n",
+    "            retry_after = int(e.headers.get(\"Retry-After\", 10)) if getattr(e, 'headers', None) else 10\n",
     "            print(f\"Rate limit exceeded. Retrying after {retry_after} seconds.\")\n",
     "            time.sleep(int(retry_after))\n",
     "            raise\n",
     "        print(f\"Error during OpenAI API call: {e}\")\n",
-    "        raise # Re-raise the exception to stop execution\n",
+    "        raise  # Re-raise the exception to stop execution\n",
     "\n",
     "import nest_asyncio\n",
     "import asyncio\n",
@@ -404,9 +406,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "### Community Information Collection ###\n"
+     ]
+    },
+    {
+     "ename": "NameError",
+     "evalue": "name 'USE_DEFAULT_COMMUNITY' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[4], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m### Community Information Collection ###\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m----> 2\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[43mUSE_DEFAULT_COMMUNITY\u001b[49m:\n\u001b[1;32m      3\u001b[0m     community_name \u001b[38;5;241m=\u001b[39m community_data[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mcommunity_name\u001b[39m\u001b[38;5;124m'\u001b[39m]\n\u001b[1;32m      4\u001b[0m     community_description \u001b[38;5;241m=\u001b[39m community_data[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mcommunity_description\u001b[39m\u001b[38;5;124m'\u001b[39m]\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'USE_DEFAULT_COMMUNITY' is not defined"
+     ]
+    }
+   ],
    "source": [
     "print(\"### Community Information Collection ###\")\n",
     "if USE_DEFAULT_COMMUNITY:\n",
@@ -448,7 +469,22 @@
     "\n",
     "statement_format = input(\"Enter the statement format (default: 'The best response is one that...'): \").strip()\n",
     "if not statement_format:\n",
-    "    statement_format = \"The best response is one that...\""
+    "    statement_format = \"The best response is one that...\"\n",
+    "\n",
+    "# upload a saved llm_cache file to resume a previous simulation\n",
+    "use_saved_cache = input(\"Do you want to use a saved LLM cache? (y/n): \").lower().strip() == 'y'\n",
+    "if use_saved_cache:\n",
+    "    if IN_COLAB:\n",
+    "        uploaded = files.upload()\n",
+    "        cache_file = list(uploaded.keys())[0]\n",
+    "    else:\n",
+    "        uploader = upload_files()\n",
+    "        while not uploader.value:\n",
+    "            pass\n",
+    "        cache_file = list(uploader.value.keys())[0]\n",
+    "    \n",
+    "    llm_cache.update(load_llm_cache(cache_file))\n",
+    "    print(f\"Loaded {len(llm_cache)} items into LLM cache\")"
    ]
   },
   {
@@ -930,6 +966,83 @@
     "for row in vote_matrix_list:\n",
     "    print(f\"    {row},\")\n",
     "print(\"]\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## 11. Data Export and LLM Cache Management\n",
+    "\n",
+    "import json\n",
+    "from IPython.display import FileLink\n",
+    "\n",
+    "# Create a dictionary mapping statement_id to statement text\n",
+    "statement_dict = {item['statement_id']: item['text'] for item in statements_list}\n",
+    "\n",
+    "# Create a reverse mapping of statement text to id\n",
+    "text_to_id = {text: id for id, text in statement_dict.items()}\n",
+    "\n",
+    "# Prepare the data structure\n",
+    "export_data = {\n",
+    "    \"community_info\": {\n",
+    "        \"name\": community_name,\n",
+    "        \"description\": community_description,\n",
+    "        \"goals\": community_goals\n",
+    "    },\n",
+    "    \"user_inputs\": {\n",
+    "        \"num_subgroups\": num_subgroups,\n",
+    "        \"num_participants\": num_participants\n",
+    "    },\n",
+    "    \"statement_format\": statement_format,\n",
+    "    \"statements\": [\n",
+    "        {\"id\": stmt_id, \"text\": text} for stmt_id, text in statement_dict.items()\n",
+    "    ],\n",
+    "    \"subgroups\": [\n",
+    "        {\n",
+    "            \"index\": i,\n",
+    "            \"description\": subgroup[\"description\"],\n",
+    "            \"participants\": [\n",
+    "                {\n",
+    "                    \"id\": participant_id,\n",
+    "                    \"description\": participant,\n",
+    "                    \"statements\": [\n",
+    "                        {\"id\": text_to_id[stmt], \"text\": stmt}\n",
+    "                        for stmt in participant_statements.get(int(participant_id), [])\n",
+    "                        if stmt in text_to_id\n",
+    "                    ],\n",
+    "                    \"votes\": {int(k): v for k, v in participant_votes.get(int(participant_id), {}).items()}\n",
+    "                }\n",
+    "                for participant_id, participant in enumerate(subgroup[\"participants\"], start=1)\n",
+    "            ]\n",
+    "        }\n",
+    "        for i, subgroup in enumerate(group_data[\"subgroups\"])\n",
+    "    ]\n",
+    "}\n",
+    "\n",
+    "# Export the data to a JSON file\n",
+    "with open('simulation_data.json', 'w') as f:\n",
+    "    json.dump(export_data, f, indent=2)\n",
+    "\n",
+    "print(\"Simulation data exported to 'simulation_data.json'\")\n",
+    "\n",
+    "# Export the LLM cache\n",
+    "with open('llm_cache.json', 'w') as f:\n",
+    "    json.dump(llm_cache, f, indent=2)\n",
+    "\n",
+    "print(\"LLM cache exported to 'llm_cache.json'\")\n",
+    "\n",
+    "# Provide download links for Colab or local\n",
+    "if IN_COLAB:\n",
+    "    from google.colab import files\n",
+    "    files.download('simulation_data.json')\n",
+    "    files.download('llm_cache.json')\n",
+    "else:\n",
+    "    from IPython.display import FileLink\n",
+    "    display(FileLink('simulation_data.json'))\n",
+    "    display(FileLink('llm_cache.json'))"
    ]
   }
  ],
